package co.edu.udistrital.Comunicacion;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication

public class ComunicacionApplication {

	public static void main(String[] args) {
		SpringApplication.run(ComunicacionApplication.class, args);
	}

}
